--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,3 @@
+altair
+pandas
 streamlit
-langchain
-openai
-chromadb
-tiktoken
-configparser
-google-generativeai
-transformers
-huggingface_hub
-sentence_transformers
